<resources>
    <string name="app_name">TokenlabMovies</string>
    <string name="imdb">IMDB:</string>
    <string name="revenue">Revenue:</string>
    <string name="production_countries">Production countries:</string>
    <string name="production_companies">Production companies:</string>
    <string name="collection">Collection:</string>
    <string name="languages">Languages:</string>
    <string name="overview">Overview:</string>
    <string name="runtime">Runtime:</string>
    <string name="release_date">Release date:</string>
    <string name="original_language">Original language:</string>
    <string name="genres">Genres:</string>
    <string name="original_title">Original title:</string>
    <string name="image_description">Image</string>
</resources>
